syntax = "proto3";
package racing;

option go_package = "/racing";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service Racing {
  // ListRaces returns a list of all races.
  //{
  //  "filter": {
  //      "meetingIds":[10],
  //      "isVisible":true
  //  },
  //  "orderBy":"id.desc"
  //}
  rpc ListRaces(ListRacesRequest) returns (ListRacesResponse) {
    option (google.api.http) = { post: "/v1/list-races", body: "*" };
  }
  //GetRace returns the details of the given race.
  //Usage:http://localhost:8000/v1/race/61
  rpc GetRace(GetRaceRequest) returns (GetRaceResponse) {
    option (google.api.http) = { get: "/v1/race/{id}"};
  }
}

/* Requests/Responses */
message GetRaceRequest {
  //This field will contain the id of the race.
  int64 id = 1;
}

message GetRaceResponse {
  Race race = 1;
}

// Request for ListRaces call.
message ListRacesRequest {
  ListRacesRequestFilter filter = 1;
  string order_by = 2; //Expecting order by in the format "orderBy":"advertised_start_time.desc"
}

// Response to ListRaces call.
message ListRacesResponse {
  repeated Race races = 1;
}

// Filter for listing races.
message ListRacesRequestFilter {
  repeated int64 meeting_ids = 1;
  bool visible_only = 2;
}

/* Resources */

// A race resource.
message Race {
  // ID represents a unique identifier for the race.
  int64 id = 1;
  // MeetingID represents a unique identifier for the races meeting.
  int64 meeting_id = 2;
  // Name is the official name given to the race.
  string name = 3;
  // Number represents the number of the race.
  int64 number = 4;
  // Visible represents whether or not the race is visible.
  bool visible = 5;
  // AdvertisedStartTime is the time the race is advertised to run.
  google.protobuf.Timestamp advertised_start_time = 6;
  //Status represents if the race is open or closed
  string status = 7;
}
